# unc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  unc_resource_usage.md
.zed/: settings.json
benchmark/qwen3/: results.md
benchmark/tinyllama/: results.md
kernel_sources/metal/unc_kernels/: mlx_kernels.metal  unc_kernels.metal
kernel_sources/metal/upstream_mlx/: mlx_qmv_fast.h
runtime/: api_server.c  repl.c  runtime.c  runtime.h
src/: lib.rs  main.rs
src/compile/: memory.rs  mod.rs
src/compile/passes/: barrier_analysis.rs  dce.rs  dual_path.rs  elementwise_fusion.rs  kernel_matching.rs  mod.rs  qkv_fusion.rs  weight_binding.rs
src/emit/: aot.rs  metal.rs  mod.rs
src/frontend/: config.rs  huggingface.rs  mod.rs
src/frontend/templates/: gemma.rs  llama.rs  mistral.rs  mod.rs  phi.rs  qwen.rs
src/ir/: graph.rs  mod.rs  ops.rs  printer.rs  types.rs
src/kernel/: metal_mlx.rs  mod.rs  registry.rs
src/runtime/: cache.rs  generate.rs  loader.rs  mod.rs  tokenizer.rs
src/unc_format/: deserialize.rs  mod.rs  serialize.rs
