[package]
name = "unc"
version = "0.1.0"
edition = "2021"
description = "Universal Neural Compiler — ML weights to optimised binaries"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
hf-hub = "0.5"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
libloading = "0.8"
crc32fast = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
bincode = "1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
core-foundation = "0.10"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[build-dependencies]
cc = "1"
